--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,22 @@
-<!-- Original Code Start 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Log In</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
+    <!-- Leon's Code Begins
+    This code was in Leon's original code. To be honest I have no idea what its doing at the moment. I will look into it later. However as it stands now, this page seems to function with or without it included. -->
     <% if (locals.messages.errors) { %>
         <% messages.errors.forEach( el=> { %>
             <div class="alert alert-danger">
@@ -24,100 +31,57 @@
                             </div>
                             <% }) %>
                                 <% } %>
+                                    <!-- Leon's Code Ends-->
 
-                                    <form action="/login" method="POST">
-                                        <input type="email" name="email" placeholder="Email">
-                                        <input type="password" name="password" placeholder="Password">
-                                        <input type="submit">
-                                    </form>
-</body>
 
-</html>
+                                    <section class="ftco-section">
+                                        <div class="container">
+                                            <div class="row justify-content-center">
+                                                <div class="col-md-12 col-lg-10">
+                                                    <div class="wrap d-md-flex">
+                                                        <div class="img"
+                                                            style="background-image: url(images/Movies.png);">
+                                                        </div>
+                                                        <div class="login-wrap p-4 p-md-5">
+                                                            <div class="d-flex">
+                                                                <div class="w-100">
+                                                                    <h3 class="mb-4">Log In</h3>
+                                                                </div>
+                                                            </div>
 
--->
+                                                            <form action="/login" class="signin-form" method="POST">
+                                                                <div class="form-group mb-3">
+                                                                    <label class="label" for="email">Email</label>
+                                                                    <input type="email" name='email' id='email'
+                                                                        class="form-control" placeholder="Email"
+                                                                        required autofocus>
+                                                                </div>
+                                                                <div class="form-group mb-3">
+                                                                    <label class="label" for="password">Password</label>
+                                                                    <input type="password" name="password" id="password"
+                                                                        class="form-control" placeholder="Password"
+                                                                        required>
+                                                                </div>
+                                                                <div class="form-group">
+                                                                    <input type="submit"
+                                                                        class="form-control btn btn-primary rounded submit px-3"
+                                                                        value='Log In'>
+                                                                </div>
 
-<!doctype html>
-<html lang="en">
+                                                            </form>
+                                                            <p class="text-center">Not a member? <a data-toggle="tab"
+                                                                    href="/signup">Sign Up</a></p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </section>
 
-<head>
-    <title>Login 04</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="css/style.css">
-
-</head>
-
-<body>
-    <section class="ftco-section">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-6 text-center mb-5">
-                    <h2 class="heading-section">Login #04</h2>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-md-12 col-lg-10">
-                    <div class="wrap d-md-flex">
-                        <div class="img" style="background-image: url(images/bg-1.jpg);">
-                        </div>
-                        <div class="login-wrap p-4 p-md-5">
-                            <div class="d-flex">
-                                <div class="w-100">
-                                    <h3 class="mb-4">Sign In</h3>
-                                </div>
-                                <div class="w-100">
-                                    <p class="social-media d-flex justify-content-end">
-                                        <a href="#"
-                                            class="social-icon d-flex align-items-center justify-content-center"><span
-                                                class="fa fa-facebook"></span></a>
-                                        <a href="#"
-                                            class="social-icon d-flex align-items-center justify-content-center"><span
-                                                class="fa fa-twitter"></span></a>
-                                    </p>
-                                </div>
-                            </div>
-                            <form action="#" class="signin-form">
-                                <div class="form-group mb-3">
-                                    <label class="label" for="name">Username</label>
-                                    <input type="text" class="form-control" placeholder="Username" required>
-                                </div>
-                                <div class="form-group mb-3">
-                                    <label class="label" for="password">Password</label>
-                                    <input type="password" class="form-control" placeholder="Password" required>
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" class="form-control btn btn-primary rounded submit px-3">Sign
-                                        In</button>
-                                </div>
-                                <div class="form-group d-md-flex">
-                                    <div class="w-50 text-left">
-                                        <label class="checkbox-wrap checkbox-primary mb-0">Remember Me
-                                            <input type="checkbox" checked>
-                                            <span class="checkmark"></span>
-                                        </label>
-                                    </div>
-                                    <div class="w-50 text-md-right">
-                                        <a href="#">Forgot Password</a>
-                                    </div>
-                                </div>
-                            </form>
-                            <p class="text-center">Not a member? <a data-toggle="tab" href="#signup">Sign Up</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+                                    <script src="js/jquery.min.js"></script>
+                                    <script src="js/popper.js"></script>
+                                    <script src="js/bootstrap.min.js"></script>
+                                    <script src="js/main.js"></script>
 
 </body>
 
