--- a/views/login.ejs
+++ b/views/login.ejs
@@ -63,7 +63,15 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
                     <div class="wrap d-md-flex">
-                        <div class="img" style="background-image: url(images/bg-1.jpg);">
+                        <div class="img" id="movies-style-test" style="background-image: url(images/bg-1.jpg);">
+                            <div class="movie-box">
+                                <div class="movie-name">
+                                <span>testname</span>
+                                </div>
+                                <div class="target">
+                                    <span>testtarget</span>
+                                </div>
+                            </div>
                         </div>
                         <div class="login-wrap p-4 p-md-5">
                             <div class="d-flex">
