--- a/views/login.ejs
+++ b/views/login.ejs
@@ -62,8 +62,11 @@
                                                                         class="form-control" placeholder="Password"
                                                                         required>
                                                                 </div>
+
+
+
                                                                 <div class="form-group">
-                                                                    <input type="submit"
+                                                                    <input id='login' type="submit"
                                                                         class="form-control btn btn-primary rounded submit px-3"
                                                                         value='Log In'>
                                                                 </div>
@@ -71,6 +74,8 @@
                                                             </form>
                                                             <p class="text-center">Not a member? <a data-toggle="tab"
                                                                     href="/signup">Sign Up</a></p>
+
+
                                                         </div>
                                                     </div>
                                                 </div>
