--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-    <title> Movie Night</title>
-    <meta content="" name="description">
-
-    <meta content="" name="keywords">
-
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
-    <!-- Template Main CSS File -->
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <%- include('./partials/head.ejs') %>
 
 <body>
 
