--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,18 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <title>Sign Up</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="css/style.css">
-
-</head>
+    <%- include('./partials/head.ejs') %>
 
 <body>
     <!-- Leon's Code Begins
