Included instructions on how to create custom titles for different views in head.ejs

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,13 +1,21 @@
 <head>
+    <!-- Custome title for each view
+        
+        When creating a new view in the controller, use the following
+        
+        res.render('login', {
+            title: 'Login'
+        })
+    -->
     <title><%= title %></title>
 
     <meta charset="utf-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-
+    <!-- BOOTSTRAP CDN Link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+     <!-- General Styling -->
     <link rel="stylesheet" href="css/style.css">
 </head>
