added new api and functionality

--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -29,20 +29,15 @@
 
 
         <h2> Not sure what to watch? </h2>
-
+        <p id="incoming-title"></p>
+        <img src="" id="incoming-img">
+        <p id="incoming-desc"></p>
         <form action="/todos/createTodo" method='POST' class=" mb-3">
             <input type="submit" value="Random" id="random" class="btn btn-dark">
-        </form>
-        <p> clicking above makes API call </p>
 
+        </form>
 
         <input type="submit" value="+ Add to Watchlist" id="watchlist" class="btn btn-danger" >
-        
-        <p class="mg"> clicking above adds Movie to database </p>
-
-
-
-
 
         <a href="/logout" class="btn-sm btn-warning ">Logout</a>
 
