Clicking Add To Wishlist puts random movie title in DOM

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,9 +15,6 @@ h1 {
 
 Original Code Ends */
 
-
-<<<<<<< HEAD
-=======
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -25,8 +22,15 @@ Original Code Ends */
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+#movieName {
+    visibility: hidden;
+}
 
->>>>>>> 566c465b96db4b0f3294f07c5b2fe9c6c2d89f58
+.todoItem {
+    display: block;
+}
+
+
 :root {
     --blue: #007bff;
     --indigo: #6610f2;
@@ -12025,8 +12029,6 @@ h5,
     color: #fff;
 }
 
-<<<<<<< HEAD
-
 #splash {
     background-color: tan;
     height: 50vh;
@@ -14448,18 +14450,19 @@ section {
     text-align: center;
     font-size: 13px;
     color: #012970;
-=======
+}
+
 #movies-styles-test {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
 .movie-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
->>>>>>> 566c465b96db4b0f3294f07c5b2fe9c6c2d89f58
 }
