--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,7 +3,7 @@
 
     <%- include('./partials/head.ejs') %>
 
-<body>
+<body class="bg-dark">
     <!-- Leon's Code Begins
     This code was in Leon's original code. To be honest I have no idea what its doing at the moment. I will look into it later. However as it stands now, this page seems to function with or without it included. -->
     <% if (locals.messages.errors) { %>
