--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 <body>
 
     <!-- ======= Hero Section ======= -->
-    <section id="hero" class="hero d-flex align-items-center bg-dark">
+    <section id="hero" class="hero d-flex align-items-center ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center">
